--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
             background-color: #f4f4f4;
             color: #333;
         }
-        h1, h2, h3 {
-            color: #0056b3;
+        h1 {
+            color: #0056b3; /* Color azul para el título principal */
+        }
+        h2 {
+            color: #ff5733; /* Color naranja para los subtítulos h2 */
+        }
+        h3 {
+            color: #33ff57; /* Color verde para los subtítulos h3 */
         }
         a {
             color: #007bff;
